[package]
name = "image_optimizer"
version = "0.1.0"
edition = "2021"
description = "A Windows-friendly image optimization reverse proxy for MinIO."
license = "MIT"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["macros"] }
bytes = "1"
futures-util = "0.3"
hex = "0.4"
http = "1"
http-body-util = "0.1"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
ravif = { version = "0.11", default-features = false, features = ["threading"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
rgb = "0.8"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "local-time"] }
url = "2"
webp = "0.3"

[dev-dependencies]
tempfile = "3"
